[gd_scene load_steps=3 format=3 uid="uid://by6bakwui8a5q"]

[ext_resource type="Script" path="res://Client/Menu/ConnectMenu.gd" id="1"]
[ext_resource type="PackedScene" path="res://Client/Menu/KeybindMenu.tscn" id="2"]

[node name="ConnectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="KeybindMenu" parent="." instance=ExtResource("2")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -84.0
offset_right = 184.0
offset_bottom = 143.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Menu Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Connecting Menu"

[node name="PlayerName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Player Name"

[node name="PlayerNameField" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PlaceholderName"

[node name="ServerInfo" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ServerIPContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ServerInfo"]
custom_minimum_size = Vector2(193.54, 0)
layout_mode = 2
alignment = 1

[node name="ServerIPLabel" type="Label" parent="Panel/VBoxContainer/ServerInfo/ServerIPContainer"]
layout_mode = 2
text = "Server IP"

[node name="ServerIPField" type="LineEdit" parent="Panel/VBoxContainer/ServerInfo/ServerIPContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP here"

[node name="ServerPortContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ServerInfo"]
layout_mode = 2
alignment = 1

[node name="ServerPortLabel" type="Label" parent="Panel/VBoxContainer/ServerInfo/ServerPortContainer"]
layout_mode = 2
text = "Server Port"

[node name="ServerPortField" type="LineEdit" parent="Panel/VBoxContainer/ServerInfo/ServerPortContainer"]
layout_mode = 2
text = "42424"

[node name="ConnectButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Status" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="ConfigureKeybindings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Configure Keybindings"

[connection signal="pressed" from="Panel/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="button_down" from="Panel/VBoxContainer/ConfigureKeybindings" to="." method="_on_ConfigureKeybindings_down"]
